Add comments to main.py
